--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "maps",
-	"name": "Maps",
-	"version": "0.1.6",
-	"minAppVersion": "1.10.0",
-	"description": "Adds a map layout to bases so you can display notes as an interactive map view.",
+  "id": "bases-timeline",
+  "name": "Bases Timeline",
+  "version": "0.2.0",
+  "minAppVersion": "1.10.2",
+  "description": "Adds a vertical Timeline layout to Bases with duration bars, events, and a Map view.",
 	"author": "Obsidian",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
