--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-	"name": "obsidian-maps",
-	"version": "0.1.6",
-	"description": "Adds map view to Obsidian Bases.",
+  "name": "obsidian-bases-timeline",
+  "version": "0.2.0",
+  "description": "Adds a Timeline view to Obsidian Bases (also includes Map).",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node scripts/generate-rtl-plugin.mjs && node esbuild.config.mjs",
 		"build": "node scripts/generate-rtl-plugin.mjs && tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [
-		"obsidian",
-		"plugin",
-		"maps",
-		"bases"
-	],
+  "keywords": [
+    "obsidian",
+    "plugin",
+    "timeline",
+    "maps",
+    "bases"
+  ],
 	"author": "Obsidian",
 	"authorUrl": "https://obsidian.md",
 	"license": "MIT",
